# slotMachineSim

./: CMakeLists.txt  Main.qml  conanfile.py  main.cpp  resources.qrc
src/: backend.cpp  backend.h
